--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,280 @@
+/* Container */
+.container {
+    width: min(100%, 1440px);
+    margin: auto;
+}
 
+/* Header */
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 82px;
+    background-color: #FA793C;
+    width: 100%;
+}
+
+.headerLogoLink {
+    display: inline-flex;
+    align-items: center;
+    column-gap: 14px;
+}
+
+.headerLogoLink img {
+    width: auto;
+    height: auto;
+}
+
+.headerLogoLink span {
+    font-family: "Pridi", serif;
+    font-size: 18px;
+    color: #FFFFFF;
+}
+
+.header_nav {
+    display: flex;
+}
+
+.header_ul {
+    display: flex;
+    column-gap: 32px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.header_li {
+    list-style: none;
+}
+
+.header_list_link {
+    font-family: "ABeeZee", sans-serif;
+    font-size: 16px;
+    color: #FFFFFF;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.header_list_link:hover {
+    color: #00ffcc;
+}
+
+.fa-circle-user {
+    font-size: 24px;
+    color: #FFFFFF;
+}
+
+/* Travel News / section 1 */
+
+.Travel_News {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 550px;
+    padding: 0 82px;
+    background-image: url(../img/cover.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    row-gap: 20px;
+}
+
+.Travel_News h2 {
+    color: #FFFFFF;
+    font-family: "Kanit", sans-serif;
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 75px;
+}
+
+.Travel_News p {
+    color: #FFFFFF;
+    font-family: "Kanit", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: center;
+}
+
+
+/* Discovery / Section 2 */
+.Discovery {
+    padding: 72px 82px;
+    background-color: #FA793C;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 34px;
+}
+
+.Discovery h3 {
+    font-family: "Kanit", sans-serif;
+    font-size: 30px;
+    font-weight: 500;
+    color: #FFFFFF;
+}
+
+.section2_images {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.sec2_img1, .sec2_img2, .sec3_img3 {
+    width: 32.2%;
+    background-color: #000000;
+    padding: 16px;
+}
+
+.section2ImageContainer {
+    width: calc(100% + 32px);
+    margin: -16px -16px 16px;
+    overflow: hidden;
+}
+
+.sec2Image {
+    width: 100%;
+    object-fit: cover;
+    transition: 0.3s linear;
+}
+
+.sec2_img1:hover .sec2Image,
+.sec2_img2:hover .sec2Image,
+.sec3_img3:hover .sec2Image {
+    transform: scale(1.2);
+    filter: grayscale(100%);
+}
+
+.sec2Name {
+    font-family: "Kanit", sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    color: #FFFFFF;
+}
+
+.sec2Description {
+    font-family: "Kanit", sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    color: #FFFFFF;
+    margin-top: 8px;
+}
+
+
+/*  Section 3 */
+
+.section3 {
+    padding: 72px 82px;
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 34px;
+}
+
+.section3 h3 {
+    font-family: Kanit;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 45px;
+    text-align: center;    
+    color: #FA793C;
+}
+
+.sec3Images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 40px;
+}
+
+.sec3Images article {
+    width: 32.3%;
+    padding: 16px;
+    border-radius: 8px;
+    border: solid 2px #FA793C;
+}
+
+.sec3_img_container {
+    width: 100%;
+    height: 224px;
+    overflow: hidden;
+    border-radius: 8px 8px 0 0;
+}
+
+.sec3_img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s linear;
+}
+
+.sec3Images article:hover .sec3_img {
+    transform: scale(1.2);
+    filter: grayscale(100%);
+}
+
+.sec3Name {
+    font-family: "Inter", serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.36px;
+    color: #FA793C;
+    margin: 16px 0 8px;
+}
+
+.priceContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.price {
+    font-family: "Inter", serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    color: #B53B1B;
+}
+
+.button_addToCart {
+    border: none;
+    width: 40px;
+    height: 40px;
+    background: url(../img/button.svg) no-repeat center center;
+    background-size: contain;
+    cursor: pointer;
+}
+
+.button_addToCart:active {
+    background-color: #B53B1B;
+}
+
+.fa-cart-plus {
+    font-size: 27px;
+    color: #FFFFFF;
+}
+
+
+/* footer */
+
+footer {
+    padding: 31px 0;
+    display: flex;
+    justify-content: center;
+    background-color: #FA793C;
+}
+
+.footer_logo {
+    display: inline-flex;
+    gap: 14px;
+    align-items: center;
+}
+
+.footer_logo span {
+    font-family: "Pridi", serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.55;
+    color: #FFFFFF;
+}
